Update: Perbaikan css

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,7 @@
 :root {
-  --primary: #4f46e5;
-  --primary-hover: #4338ca;
-  --success: #10b981;
+  --primary: #8346e5;
+  --primary-hover: #8346e5;
+  --success: #1e74de;
   --danger: #ef4444;
   --gray-100: #f3f4f6;
   --gray-200: #e5e7eb;
